--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     {% include head-custom.html %}
   </head>
   <body>
-    <div class="wrapper" style="max-width: 90%; margin-left:10px auto;">
+    <div style="width: 90%; margin-left:50px;">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
