--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     {% include head-custom.html %}
   </head>
   <body>
-    <div style="width: 100%; margin-left:200px; margin-top: 0px; margin-right: 0px; margin-bottom: 0px;">
+    <div style="max-width: 90%; margin-left:200px; margin-top: 0px; margin-right: 50px; margin-bottom: 0px;">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
