adding big span class

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,11 @@
     {% include head-custom.html %}
   </head>
   <style>
+    .big img {
+      display: block;
+      width: 100%;
+      height: auto;
+    }
   </style>
   <body>
     <div style="max-width: 90%; margin-left:50px; margin-top: 0px; margin-right: 50px; margin-bottom: 0px;">
