--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <style>
     .big img {
       display: block;
-      width: 100%;
+      max-width: 100%;
       height: auto;
     }
   </style>
