--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     }
   </style>
   <body>
-    <div style="max-width: 90%; margin-left:50px; margin-top: 0px; margin-right: 50px; margin-bottom: 0px;">
+    <div style="margin-left:50px; margin-top: 0px; margin-right: 50px; margin-bottom: 0px;">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
