--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,12 @@
       max-width: 100%;
       height: auto;
     }
+    blockquote {
+      padding: 0 0 0 20px;
+      margin-bottom: 20px;
+      font-size: 1.1em;
+      border-left: 10px solid #e9e9e9;
+  }
   </style>
   <body>
     <div style="margin-left:50px; margin-top: 0px; margin-right: 50px; margin-bottom: 0px;">
