--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       height: auto;
     }
     blockquote {
-      padding: 0 0 0 20px;
+      padding: 0;
       margin-bottom: 20px;
       font-size: 1.1em;
       border-left: 10px solid #e9e9e9;
