--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
       padding: 0;
       margin-bottom: 20px;
       font-size: 1.1em;
-      border-left: 10px solid #e9e9e9;
+      border-left: 10px solid #9b9b9b;
   }
   </style>
   <body>
