blockquote needed padding

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       height: auto;
     }
     blockquote {
-      padding: 0;
+      padding: 0 0 0 5px;
       margin-bottom: 20px;
       font-size: 1.1em;
       border-left: 10px solid #9b9b9b;
