break word in blockquote

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
       margin-bottom: 20px;
       font-size: 1.1em;
       border-left: 10px solid #9b9b9b;
+      word-wrap: break-word;
   }
   </style>
   <body>
