language-plaintext break-word

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,10 @@
       font-size: 1.1em;
       border-left: 10px solid #9b9b9b;
       word-wrap: break-word;
-  }
+    }
+    .language-plaintext .highlighter-rouge {
+      word-wrap: break-word;
+    }
   </style>
   <body>
     <div style="margin-left:50px; margin-top: 0px; margin-right: 50px; margin-bottom: 0px;">
