code break-word

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
       border-left: 10px solid #9b9b9b;
       word-wrap: break-word;
     }
-    .language-plaintext .highlighter-rouge {
+    code {
       word-wrap: break-word;
     }
   </style>
