review work break

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,17 @@
       margin-bottom: 20px;
       font-size: 1.1em;
       border-left: 10px solid #9b9b9b;
+      display: inline-block;
+      white-space: normal;
+      max-width: 100%; 
+      word-break: break-all; 
       word-wrap: break-word;
     }
     code {
+      display: inline-block;
+      white-space: normal;
+      max-width: 100%; 
+      word-break: break-all; 
       word-wrap: break-word;
     }
   </style>
