--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,9 @@
     {% include head-custom.html %}
   </head>
   <style>
+    em {
+      word-wrap: break-word;
+    }
     .big img {
       display: block;
       max-width: 100%;
