--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,9 @@
     em {
       word-wrap: break-word;
     }
+    p {
+      word-wrap: break-word;
+    }    
     .big img {
       display: block;
       max-width: 100%;
