--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,10 @@
+{% assign this_pdf =  ':/' | append: page.path | replace: '.md', '.pdf' %}
+{% for static in site.static_files %}
+  {% capture static_file_list %}:{{static.path}}{{static_file_list}}{% endcapture %}
+{% endfor %}
+{% if static_file_list contains this_pdf %}
+  {% assign contains_pdf = true %}
+{% endif %}
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
@@ -38,7 +45,8 @@
   <body>
     <div style="margin-left:50px; margin-top: 0px; margin-right: 50px; margin-bottom: 0px;">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a>
+          {% if contains_pdf %}<a href="{{page.name | replace: '.md', '.pdf'}}"><img style="padding-left: 10px;" src="/img/pdf.png" alt="pdf"/></a>{% endif %}</h1>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
@@ -63,9 +71,7 @@
         {% endif %}
       </header>
       <section>
-
       {{ content }}
-
       </section>
       <footer>
         {% if site.github.is_project_page %}
