--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,10 +75,10 @@
       </section>
       <footer>
         {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        <p style="padding: 0px; margin-bottom: 0px;">This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         {% if site.github.is_project_page %}
-        <p>View the Project on GitHub <a href="{{ site.github.repository_url }}">{{ site.github.repository_nwo }}</a></p>
+        <p style="padding: 0px; margin-bottom: 0px;">View the Project on GitHub <a href="{{ site.github.repository_url }}">{{ site.github.repository_nwo }}</a></p>
         {% endif %}
       </footer>
     </div>
