--- a/_layouts/dirlisting.html
+++ b/_layouts/dirlisting.html
@@ -49,6 +49,7 @@
       text-align: left;
       padding: 8px;
       word-wrap: break-word;
+      padding: 3px 5px 3px 5px;
     }
     tr:nth-child(odd) {
       background-color: #f2f2f2;
