--- a/_layouts/dirlisting.html
+++ b/_layouts/dirlisting.html
@@ -102,7 +102,7 @@
         {% endif %}
       </header>
       <section>
-      <div style="padding-bottom: 10px;">
+      <div>
         <h1 style="display: inline-block;">{{ page.dir | regex_replace: '/$', '' }}:</h1>
         <div style="display: inline-block;">
           <small>
