--- a/_layouts/filesyntax.html
+++ b/_layouts/filesyntax.html
@@ -71,9 +71,9 @@
       </header>
       <section>
         <div style="padding-top: 10px;">
-          {% assign real_path = page.path | regex_replace: '\.md', '' %}
-          <a href="{{ real_path }}" style="color: #6d6d6d;"><div style="margin-bottom: 0; font-size: 110%; font-weight: bold;">{{ real_path }}</div></a>
-          {% highlight_param {{ page.lang }} %}{% include_relative {{ real_path }} %}{% endhighlight_param %}
+          {% assign real_name = page.name | regex_replace: '\.md', '' %}
+          <a href="{{ real_name }}" style="color: #6d6d6d;"><div style="margin-bottom: 0; font-size: 110%; font-weight: bold;">{{ real_name }}</div></a>
+          {% highlight_param {{ page.lang }} %}{% include_relative {{ real_name }} %}{% endhighlight_param %}
         </div>
       </section>
       <footer>
