--- a/_layouts/dirlisting.html
+++ b/_layouts/dirlisting.html
@@ -1,123 +1,12 @@
+{% assign body_content = "dirlisting_html_body_content" %}
+{% assign body_header = "default_html_body_header" %}
+{% assign body_footer = "default_html_body_footer" %}
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-    {% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-    {% include head-custom.html %}
-    <style>
-      em {
-        word-wrap: break-word;
-      }
-      p {
-        word-wrap: break-word;
-      }    
-      .big img {
-        display: block;
-        max-width: 100%;
-        height: auto;
-      }
-      .text_icon img {
-        max-height: 0.7em; 
-      }
-      blockquote {
-        padding: 0 0 0 5px;
-        margin-bottom: 20px;
-        font-size: 1.1em;
-        border-left: 10px solid #9b9b9b;
-        word-wrap: break-word;
-      }
-      ul {
-        padding-left: 1em
-      }
-      li {
-        padding-left: 1em
-      }
-      li:before {
-        content: "";
-        margin-left: -0.5rem;
-      }
-      table {
-        border-collapse: collapse;
-        width: 100%;
-      }
-      th, td {
-        text-align: left;
-        padding: 8px;
-        word-wrap: break-word;
-        padding: 3px 5px 3px 5px;
-      }
-      tr:nth-child(even) {
-        background-color: #d7dae0;
-      }
-      code {
-        font-size: 110%;
-      }     
-    </style>    
-  </head>
+  {% include default_html_head.html %}
   <body>
-    <div style="margin-left:50px; margin-top: 0px; margin-right: 50px; margin-bottom: 0px;">
-      <header style="padding-bottom: 15px; padding-top: 20px;">
-        <h1 style="word-break: break-word; margin-bottom: 0; border-bottom: 0; padding-bottom: 0;"><a href="{{ "/" | absolute_url }}">{{ page.title | default: site.title }}</a>
-          {% if contains_pdf %}
-            <a href="{{page.name | replace: '.md', '.pdf'}}"><img style="padding-left: 10px;" src="/img/pdf.png" alt="pdf"/></a>
-          {% endif %}
-        </h1>
-        <div>{{ page.description | default: site.description }}</div>
-      </header>
-      <section>
-      <div style="word-break: break-all;">
-        <h1 style="display: inline-block; ">{{ page.dir | regex_replace: '/$', '' }}:</h1>
-        <div style="display: inline-block;">
-          <small>
-            {% if page.pretty_print_files %}
-            <a href="index.html" style="color: #6d6d6d;">(close syntax highlight)</a>
-            {% else %}
-            <a href="syntaxhl.html" style="color: #6d6d6d;">(open syntax highlight)</a>
-            {% endif %}
-          </small>
-        </div>
-      </div>       
-      {% if page.pretty_print_files %}
-        {% for static in site.static_files %}
-          {% if static.path contains page.dir %}
-            {% case static.extname %}
-              {% when ".yaml", ".yml" %}
-                {% assign lang = "yaml" %}
-              {% when ".sh" %}
-                {% assign lang = "bash" %}
-              {% when ".js", ".json" %}
-                {% assign lang = "json" %}
-              {% else %}
-                {% assign lang = "text" %}
-            {% endcase %}
-            <div style="padding-top: 10px;">
-              <a href="{{ static.path }}" style="color: #6d6d6d;"><div style="margin-bottom: 0; font-size: 110%; font-weight: bold;">{{ static.name }}</div></a>
-              {% highlight_param {{ lang }} %}{% include_relative {{ static.name }} %}{% endhighlight_param %}
-              <div style="height: 15px;"></div>
-            </div>
-          {% endif %}
-        {% endfor %} 
-      {% else %}
-        <table style="word-break: break-all;">
-          {% directory path: page.dir exclude: .md$ %}
-            <tr>
-              <td><a href="{{ file.url }}"><div style="margin-bottom: 0;">{{ file.name }}</div></a></td>
-              <td style="font-size: 90%;">{{ file.size }}</td>
-              <td style="font-size: 90%;">{{ file.date |  date: "%c" }}</td>
-            </tr>       
-          {% enddirectory %}
-        </table>            
-      {% endif %}
-      </section>
-      <footer>
-        {% if page.git %}
-          this <a href="{{ page.git }}">blog</a> in Github
-        {% endif %}        
-      </footer>
-    </div>
+    {% include {{ body_header }}.html %}
+    {% include {{ body_content }}.html %}
+    {% include {{ body_footer }}.html %}
   </body>
 </html>
