--- a/_includes/filesyntax_html_body_content.html
+++ b/_includes/filesyntax_html_body_content.html
@@ -1,7 +1,8 @@
 <section>
   <div style="padding-top: 10px;">
     {% assign real_name = page.name | regex_replace: '\.md', '' %}
+    {% assign lang = real_name | regex_replace: '^.*\.', '' | regex_replace: 'Containerfile', 'dockerfile' %}
     <a href="{{ real_name }}" style="color: #6d6d6d;"><div style="margin-bottom: 0; font-size: 110%; font-weight: bold;">{{ real_name }}</div></a>
-    {% highlight_param {{ page.lang }} %}{% include_relative {{ real_name }} %}{% endhighlight_param %}
+    {% highlight_param {{ lang }} %}{% include_relative {{ real_name }} %}{% endhighlight_param %}
   </div>     
 </section>
